--- a/learnmore.html
+++ b/learnmore.html
@@ -14,7 +14,7 @@
         body{
             margin: 0;  
             font-family: 'Oswald', sans-serif;
-            color:black;
+            
             background-color: lightslategray;
         }
         header{
@@ -50,11 +50,20 @@
             cursor: pointer;
 
         }
+        #starter-text{
+            text-align: center;
+            padding-top: 200px;
+            font-size: xx-large;
+            backdrop-filter: blur(4px);
+        } 
         #wrapper1{
             backdrop-filter: blur(4px);
         }
         #learn-more:hover{
             background-color: grey;
+        }
+        #under{
+            text-align: center;
         }
     </style>
     <header>
@@ -70,28 +79,37 @@
     <div id="wrap">
         <div id="background">
             <div id="wrapper1">
-                <br><br><br>
-                <br><br><br>
-                <a id="learn-more" href="index.html">Back to Home Page</a>
-                <h1 id="faqs">FAQs</h1>
-                <b id="question">How do I Connect To a Lawyer?</b><br>
-                <br>
-                <strong>After Registering for an Account, Simply choose from our List of lawyers <br>
-                    or Submit your Legal Queries and receive feedback from our Lawyers. <br>
-                    <br></strong>
-                <b id="question">Where can I Download the App?</b><br>
-                <br>
-                <strong>Sorry, but as of today, eLawyer is still in development. <br>
-                    Follow our Facebook page, eLawyer for Updates regarding its initial release. <br>
-                    <br></strong>
-                <b id="question">Im a Lawyer and i am willing to Join your Team, what should i do?</b><br>
-                <br>
-                <strong>Contact us at elawyer.contact@gmail.com and state your name, age, contact details, <br>
-                    current affiliation, and your other personal details.</strong>
-                <br><br><b><br><br><br><br><br><br><br><br><br>
-                </b>
+                
+                <div id="starter-text">
+                    <strong>With just a few Taps away, we can match you up <br>
+                        with the Perfect and the Brightest Lawyers <br></strong>   
+                        <br>
+                        <a id="learn-more" href="index.html">Back to Home Page</a>
+                        <br>
+                        <br>
+                        <br><br><br><br>
+                </div>
         </div>
         </div>
+    </div>
+    <div id="under">
+        <h1 id="faqs">FAQs</h1>
+            <b id="question">How do I Connect To a Lawyer?</b><br>
+            <br>
+            <strong>After Registering for an Account, Simply choose from our List of lawyers <br>
+                or Submit your Legal Queries and receive feedback from our Lawyers. <br>
+                <br></strong>
+            <b id="question">Where can I Download the App?</b><br>
+            <br>
+            <strong>Sorry, but as of today, eLawyer is still in development. <br>
+                Follow our Facebook page, eLawyer for Updates regarding its initial release. <br>
+                <br></strong>
+            <b id="question">Im a Lawyer and i am willing to Join your Team, what should i do?</b><br>
+            <br>
+            <strong>Contact us at elawyer.contact@gmail.com and state your name, age, contact details, <br>
+                current affiliation, and your other personal details.</strong>
+            <br><br><b><br><br><br><br><br><br><br><br><br>
+            </b>
     </div>
 </body>
 </html>
