--- a/learnmore.html
+++ b/learnmore.html
@@ -15,7 +15,7 @@
             margin: 0;  
             font-family: 'Oswald', sans-serif;
             
-            background-color: lightslategray;
+            background-color:rgb(147,132,94)
         }
         header{
             font-size:xx-large;
